# pyVertexModel

./: .coveragerc  .gitignore  BUG_FIX_SUMMARY.md  CITATION.cff  CODE_OF_CONDUCT.md  CONCLUSION.md  DEEP_BUG_ANALYSIS.md  FINAL_SUMMARY.md  FIRE_ALGORITHM_GUIDE.md  FIX_SUMMARY.md  INVESTIGATION_REPORT.md  LICENSE  Main.py  NUMERICAL_SINGULARITY_FIX.md  README.md  RK2_IMPLEMENTATION.md  SECURITY.md  SUMMARY.md  TEST_FIRE_CONFIGURATION.md  check_initial_gradient.py  debug_test_3.py  diagnostic_explosion.py  diagnostic_focused.py  pyproject.toml  requirements.txt  run_test_3_debug.py  setup.py  test_3_minimal.py  test_fire_simple.py  test_rk2.py  test_singularity_fixes.py
.github/: copilot-instructions.md
.run/: analyse_simulation.run.xml  analyse_simulations.run.xml
FromMatlab/: InitializeVertexModel.py  IterateOverTime.py  LineSearch.py  Main.py  NewtonRaphson.py
Src/: InitializeVertexModel.py  IterateOverTime.py
Tests/: CheckYsAndFacesHaveNotChanged.py  GeoTests.py  __init__.py  test_cell.py  test_degreesOfFreedom.py  test_face.py  test_flip.py  test_geo.py  test_kg.py  test_kgContractility.py  test_kgSubstrate.py  test_kgSurfaceCellBasedAdhesion.py  test_kgTriAREnergyBarrier.py  test_kgTriEnergyBarrier.py  test_kgViscosity.py  test_kgVolume.py  test_kg_functions.py  test_newtonRaphson.py  test_remodelling.py  test_set.py  test_tris.py  test_utils.py  test_vertexModel.py  test_vertex_valence.py  tests.py
Tests_data/: Geo_var_3x3_stretch.mat  Geo_var_3x3_stretch_expectedResults.mat  Geo_var_cyst_expectedResults_cell1.mat  Newton_Raphson_3x3_stretch_expected.mat  Newton_Raphson_Iteration_wingdisc_expected.mat  Newton_Raphson_ml_divide_3x3_stretch_expected.mat  add_and_rebuild_cells_wingdisc.mat  add_and_rebuild_cells_wingdisc_expected.mat  add_tetrahedra_wingdisc_expected.mat  build_2d_voronoi_from_image_wingdisc.mat  build_cells_cyst_expected.mat  build_face_cyst.mat  build_globald_ids_wingdisc_expected.mat  build_topo_expected.mat  build_x_from_y_wingdisc.mat  calculate_neighbours_wingdisc.mat  check_ys_and_faces_have_not_changed_wingdisc.mat  delaunay_compute_entities_expected.mat  delaunay_input_expected.mat  delaunay_output_cyst.mat  flipNM_cyst.mat  flipNM_recursive_cyst.mat  generate_first_ghost_nodes_expected.mat  get_dofs_remodel.mat  get_four_fold_vertices_wingdisc.mat  get_node_neighbours_per_domain_wingdisc.mat  initialize_cells_cyst_expected.mat  line_search_cyst.mat  (+15 more)
(+284 files in other folders)
